<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="50sp"
        android:orientation="vertical"
        tools:context=".StartFragment">

        <TextView
            android:id="@+id/textForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/righteous"
            android:text="@string/impediments_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/textOpis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/righteous"
            android:text="@string/impediments_explanation"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:visibility="visible"
            />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/checkBoxPregnant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:textColor="@color/white"
            android:layout_marginTop="20sp"
            android:text="@string/pregnant"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/checkBoxChild"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:textColor="@color/white"
            android:text="@string/child" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/checkBoxAllergy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:textColor="@color/white"
            android:text="@string/allergy" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/checkBoxMadicalCondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:textColor="@color/white"
            android:text="@string/medical_condition" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/checkBoxPositive"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/righteous"
            android:textColor="@color/white"
            android:text="@string/positive" />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/righteous"
            android:text="@string/dalje"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/purple"
            android:textColorLink="@color/purple"
            android:textSize="30sp"
            app:backgroundTint="@color/green"
            app:rippleColor="@color/green"
            tools:visibility="visible" />



    </LinearLayout>
</layout>
