<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginTop="50sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="50sp"
        android:orientation="vertical"
        tools:context=".StartFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="175sp"
            android:contentDescription="@string/syringe"
            app:srcCompat="@drawable/ic_syringe"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textDobrodosli"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/righteous"
            android:text="@string/welcome_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/righteous"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textOpis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/righteous"
            android:text="@string/description"
            android:textAlignment="inherit"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:visibility="visible"
            />

        <Button
            android:id="@+id/buttonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/righteous"
            android:text="@string/dalje"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/purple"
            android:textColorLink="@color/purple"
            android:textSize="30sp"
            app:backgroundTint="@color/green"
            app:rippleColor="@color/green"
            tools:visibility="visible" />
    </LinearLayout>
</layout>
