<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="50sp"
        android:orientation="vertical"
        tools:context=".StartFragment">

        <TextView
            android:id="@+id/textForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/righteous"
            android:text="@string/form"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="@color/green"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColor="@color/green"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="14sp" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="140sp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:calendarTextColor="@color/green"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:foregroundTint="#FFFFFF"
            android:gravity="center"
            android:scrollbarThumbHorizontal="@color/green"
            android:scrollbarThumbVertical="@color/green"
            android:spinnersShown="true"
            android:textColor="@color/green"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="14sp"
            android:yearListSelectorColor="@color/green" />

        <EditText
            android:id="@+id/editTextCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textColor="@color/green"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:hint="@string/phone_number"
            android:textColor="@color/green"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:inputType="phone"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:hint="@string/email"
            android:textColor="@color/green"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:inputType="textEmailAddress"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/editTextHealthCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:ems="10"
            android:fontFamily="@font/righteous"
            android:gravity="center"
            android:hint="@string/health_card"
            android:textColor="@color/green"
            android:textColorHint="@color/white"
            android:textColorLink="@color/white"
            android:inputType="number"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/buttonNext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/righteous"
            android:text="@string/dalje"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHighlight="@color/purple"
            android:textColorLink="@color/purple"
            android:textSize="30sp"
            app:backgroundTint="@color/green"
            app:rippleColor="@color/green"
            tools:visibility="visible" />



    </LinearLayout>
</layout>
